@@ -22,7 +22,7 @@ require Exporter;
 
 use strict;
 use vars qw[$DEBUG $error $VERSION $WARN $FOLLOW_SYMLINK $CHOWN $CHMOD
-            $DO_NOT_USE_PREFIX $HAS_PERLIO $HAS_IO_STRING
+            $DO_NOT_USE_PREFIX $HAS_PERLIO $HAS_IO_STRING $SAME_PERMISSIONS
             $INSECURE_EXTRACT_MODE @ISA @EXPORT
          ];
 
@@ -31,9 +31,10 @@ use vars qw[$DEBUG $error $VERSION $WARN $FOLLOW_SYMLINK $CHOWN $CHMOD
 $DEBUG                  = 0;
 $WARN                   = 1;
 $FOLLOW_SYMLINK         = 0;
-$VERSION                = "1.48";
+$VERSION                = "1.50";
 $CHOWN                  = 1;
 $CHMOD                  = 1;
+$SAME_PERMISSIONS       = $> == 0 ? 1 : 0;
 $DO_NOT_USE_PREFIX      = 0;
 $INSECURE_EXTRACT_MODE  = 0;
 
@@ -806,7 +807,11 @@ sub _extract_file {
     ### only chmod if we're allowed to, but never chmod symlinks, since they'll
     ### change the perms on the file they're linking too...
     if( $CHMOD and not -l $full ) {
-        chmod $entry->mode, $full or
+        my $mode = $entry->mode;
+        unless ($SAME_PERMISSIONS) {
+            $mode &= ~(oct(7000) | umask);
+        }
+        chmod $mode, $full or
             $self->_error( qq[Could not chown '$full' to ] . $entry->mode );
     }
 
@@ -1760,6 +1765,15 @@ In some cases, this may not be desired. In that case, set this
 variable to C<0> to disable C<chmod>-ing.
 
 The default is C<1>.
+
+=head2 $Archive::Tar::SAME_PERMISSIONS
+
+When, C<$Archive::Tar::CHMOD> is enabled, this setting controls whether
+the permissions on files from the archive are used without modification
+of if they are filtered by removing any setid bits and applying the
+current umask.
+
+The default is C<1> for the root user and C<0> for normal users.
 
 =head2 $Archive::Tar::DO_NOT_USE_PREFIX
 
